# python-diplom

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: lint_test.yml
orders/: .env.example  docker-compose.yaml
orders/backend/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
orders/backend/migrations/: 0001_initial.py
orders/orders/: settings.py  urls.py
orders/tests/: conftest.py  test_backend.py
