[project]
name = "python-diplom-final"
version = "0.1.0"
description = "Netology Python developer advanced course"
authors = [
    {name = "Aleksandr Leshkov",email = "alex.leshkov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django==5.2.6",
    "python-dotenv==1.1.1",
    "django-rest-passwordreset (>=1.5.0,<2.0.0)",
    "ujson (>=5.11.0,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

[project.optional-dependencies]
    test = [

    ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false