[project]
name = "python-diplom-final"
version = "0.1.0"
description = "Netology Python developer advanced course"
authors = [
    {name = "Aleksandr Leshkov",email = "alex.leshkov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django==5.2.6",
    "python-dotenv==1.1.1",
    "django-rest-passwordreset (>=1.5.0,<2.0.0)",
    "ujson (>=5.11.0,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[dependency-groups]
test = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "coverage (>=7.10.7,<8.0.0)",
    "ruff (>=0.13.2,<0.14.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "orders.settings"
